--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DATETIME_FORMAT='YYYY-MM-DDTHH:mm:ssZ'
 DATE_FORMAT='YYYY-MM-DD'
 TIME_FORMAT='HH:mm:ss'
 
-JWT_SECRET='@Ptk51#mE4#Y$9PoM8SwA9w1M'
+JWT_SECRET='AddYourSecretHere'
 JWT_CONFIG_SESSION='false'
 JWT_CONFIG_SESSION_FAILWITHERROR='true'
 
